测试了-XX:+PrintGCDetails，默认情况下eden区和两个survivor区的内存比大约是3:1，并不是8:1